--- a/src/main/resources/META-INF/resources/product.xhtml
+++ b/src/main/resources/META-INF/resources/product.xhtml
@@ -12,13 +12,13 @@
 				<p:panelGrid columns="1" styleClass="form-group ui-panelgrid-blank"
 					layout="grid">
 					<p:outputLabel value="Product No:" for="pno" />
-                                        <p:inputText id="pno" value="#{tabViewController.selectedTab.productController.product.productid}" />
+                                        <p:inputText id="pno" value="#{productController.selected.productid}" disabled="true"/>
 					<p:outputLabel value="Name:" for="name" />
-					<p:inputText id="name" placeholder="Name" />
-					<p:outputLabel value="Email:" for="email" />
-					<p:inputText id="email" placeholder="Email" />
-					<p:outputLabel value="Phone:" for="phone" />
-					<p:inputText id="phone" placeholder="Phone" />
+                                        <p:inputText id="name" placeholder="Name" value="#{productController.selected.productname}"/>
+					<p:outputLabel value="Supplier Code:" for="supcode" />
+                                        <p:inputText id="supcode" placeholder="Supplier Code" value="#{productController.selected.supplierscode}" />
+					<p:outputLabel value="Barcode1:" for="barcode1" />
+                                        <p:inputText id="barcode1" placeholder="Barcode1" value="#{productController.selected.barcode1}" />
 				</p:panelGrid>
 			</div>
 		</div>
