--- a/src/main/resources/META-INF/resources/accmaster.xhtml
+++ b/src/main/resources/META-INF/resources/accmaster.xhtml
@@ -9,7 +9,7 @@
 			<div class="card">
 				<h1>Account Page</h1>
 				<p>Hurray All Accounts</p>
-				<p:inputText id="name" value="#{productTreeView.treeName}"/>
+				<p:inputText id="name" value="#{productTreeViewController.treeName}"/>
 			</div>
 		</div>
 	</div>
