--- a/src/main/resources/META-INF/resources/prodmaster2.xhtml
+++ b/src/main/resources/META-INF/resources/prodmaster2.xhtml
@@ -11,7 +11,7 @@
 					<p:layout style="width:100%; height:100%">
 						<p:layoutUnit position="west" resizable="true" size="20%"
 							style="height:100%">
-							<p:tree value="#{productTreeView.root}" var="node" dynamic="true"
+							<p:tree value="#{productTreeViewController.root}" var="node" dynamic="true"
 								style="width:100%; height:100%;">
 								<p:treeNode expandedIcon="pi pi-folder-open"
 									collapsedIcon="pi pi-folder">
