--- a/src/main/resources/META-INF/resources/california-layout/template.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template.xhtml
@@ -52,6 +52,7 @@
            </f:facet>
        </p:ajaxStatus>
 
+        <!--<h:outputStylesheet name="css/pfcrud.css"/>-->
         <h:outputStylesheet name="css/nanoscroller.css" library="california-layout" />
         <h:outputStylesheet name="css/layout-#{guestPreferences.theme}.css" library="california-layout" />
     </h:body>
