--- a/src/main/resources/META-INF/resources/california-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template_busdoc.xhtml
@@ -20,14 +20,12 @@
 
     <h:body styleClass="main-body">
 
-        <div class="layout-wrapper #{guestPreferences.menuLayout != 'static' ? guestPreferences.menuLayout : null}">
-            <ui:include src="./megamenu.xhtml" />
-            <ui:include src="./topbar.xhtml" />
-            <ui:include src="./sidebar.xhtml" />
-            <ui:include src="./right-sidebar.xhtml" />
+        <div class="layout-wrapper #{guestPreferences.busdocMenuLayout != 'static' ? guestPreferences.busdocMenuLayout : null}"
+             style="height:100% !important;">
+            <ui:include src="./topbar_busdoc.xhtml" />
 
-            <div class="layout-main">
-                <div class="route-bar">
+            <div class="layout-main" style="height:100% !important;">
+                <div class="route-bar" style="width: 100%;">
                     <div class="route-bar-breadcrumb">
                         <i class="fa fa-home"></i> <span>/ </span>
                         <ui:insert name="viewname" />
@@ -43,14 +41,14 @@
         </div>
 
         <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
-           <f:facet name="start">
-               <i class="fa fa-circle-o-notch fa-spin ajax-loader" aria-hidden="true"></i>
-           </f:facet>
+            <f:facet name="start">
+                <i class="fa fa-circle-o-notch fa-spin ajax-loader" aria-hidden="true"></i>
+            </f:facet>
 
-           <f:facet name="complete">
-               <h:outputText value="" />
-           </f:facet>
-       </p:ajaxStatus>
+            <f:facet name="complete">
+                <h:outputText value="" />
+            </f:facet>
+        </p:ajaxStatus>
 
         <!--<h:outputStylesheet name="css/pfcrud.css"/>-->
         <h:outputStylesheet name="css/nanoscroller.css" library="california-layout" />
