--- a/src/main/resources/META-INF/resources/california-layout/topbar_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/topbar_busdoc.xhtml
@@ -2,9 +2,9 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:po="http://primefaces.org/california">
 
     <div class="layout-topbar">
-        <h:link styleClass="logo">
+        <h:panelGroup  styleClass="logo">
             <p:graphicImage name="images/logo.png" library="california-layout" />
-        </h:link>
+        </h:panelGroup>
 
     </div>
 
