--- a/src/main/resources/META-INF/resources/index_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/index_busdoc.xhtml
@@ -12,16 +12,18 @@
     </ui:define>
 
     <ui:define name="content">
-        <h:form id="mainform" style="height:100% !important;">
+        <h:form id="mainform">
             <p:growl id="msgs" showDetail="true" />
-                <pe:layout fullPage="false" style="height:100% !important;">
-                    <pe:layoutPane position="west">
-                        Left
-                    </pe:layoutPane>
-                    <pe:layoutPane position="center">
-                        Center
-                    </pe:layoutPane>
-                </pe:layout>
+            <pe:layout fullPage="false" options="#{productSearchController.layoutOptions}"
+                       stateCookie="true" widgetVar="layoutWidget">
+                <pe:layoutPane position="center">
+                    <p:panel styleClass="resolution-center" header="Document Details">
+                    </p:panel>
+                </pe:layoutPane>
+                <pe:layoutPane position="west" size="25%">
+                    <ui:include src="./product/prodsearch.xhtml"/>
+                </pe:layoutPane>
+            </pe:layout>
         </h:form>
     </ui:define>
 
