--- a/src/main/resources/META-INF/resources/california-layout/template_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template_busdoc.xhtml
@@ -12,20 +12,41 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title><ui:insert name="title">SMB ERP</ui:insert></title>
+        <title><ui:insert name="title">PrimeFaces California</ui:insert></title>
         <h:outputScript name="js/nanoscroller.js" library="california-layout" />
         <h:outputScript name="js/layout.js" library="california-layout" />
         <ui:insert name="head"/>
+        <script type="text/javascript">
+            //<![CDATA[
+            function openLeftMenu() {
+                document.getElementById("leftMenu").style.display = "block";
+            }
+
+            function closeLeftMenu() {
+                document.getElementById("leftMenu").style.display = "none";
+            }
+
+            function openRightMenu() {
+                document.getElementById("rightMenu").style.display = "block";
+            }
+
+            function closeRightMenu() {
+                document.getElementById("rightMenu").style.display = "none";
+            }
+            //]]>
+        </script>
     </h:head>
 
     <h:body styleClass="main-body">
 
-        <div class="layout-wrapper #{guestPreferences.busdocMenuLayout != 'static' ? guestPreferences.busdocMenuLayout : null}"
-             style="height:100% !important;">
+        <div class="layout-wrapper #{guestPreferences.busdocMenuLayout != 'static' ? guestPreferences.busdocMenuLayout : null}">
+            <ui:include src="./megamenu.xhtml" />
             <ui:include src="./topbar_busdoc.xhtml" />
+            <ui:include src="./sidebar_busdoc.xhtml" />
+            <ui:include src="./right-sidebar.xhtml" />
 
-            <div class="layout-main" style="height:100% !important;">
-                <div class="route-bar" style="width: 100%;">
+            <div class="layout-main">
+                <div class="route-bar">
                     <div class="route-bar-breadcrumb">
                         <i class="fa fa-home"></i> <span>/ </span>
                         <ui:insert name="viewname" />
@@ -34,9 +55,13 @@
                     <ui:include src="./route-bar-menu.xhtml" />
                 </div>
 
-                <div class="layout-main-content">
-                    <ui:insert name="content"/>
+                <div class="w3-container">
+                    <div class="layout-main-content">
+                        <ui:insert name="content"/>
+                    </div>
                 </div>
+
+                <ui:include src="./footer.xhtml" />
             </div>
         </div>
 
@@ -50,7 +75,7 @@
             </f:facet>
         </p:ajaxStatus>
 
-        <!--<h:outputStylesheet name="css/pfcrud.css"/>-->
+        <h:outputStylesheet name="css/sidebar.css" />
         <h:outputStylesheet name="css/nanoscroller.css" library="california-layout" />
         <h:outputStylesheet name="css/layout-#{guestPreferences.theme}.css" library="california-layout" />
     </h:body>
