--- a/src/main/resources/META-INF/resources/california-layout/sidebar_busdoc.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/sidebar_busdoc.xhtml
@@ -10,53 +10,44 @@
             <a href="javascript:void(0)" class="fa fa-times" onclick="closeLeftMenu()"
                style="position: absolute; right: 0px; width: 32px; padding: 10px"/>
         </div>
-        <div class="ui-g">
-            <h:form id="menuform">
-                <div class="ui-g-12">
-                    <p:toolbar>
-                        <f:facet name="left">
-                            <p:outputLabel value="Search Criteria:  "/>
-                            <p:inputText id="pcriteria" placeholder="Criteria" value="#{productSearchController.criteria}"/>
-                            <p:outputLabel value="  "/>
-                            <p:commandButton icon="fa fa-send" actionListener="#{productSearchController.searchProducts()}" 
-                                             update="prodtable"/>
-                        </f:facet>
-                        <f:facet name="right">
-                            <p:commandButton icon="fa fa-arrow-right" actionListener="#{productSearchController.transfer()}" 
-                                             update=":docform:docprodtable"/>
-                        </f:facet>
-                    </p:toolbar>
-                </div>
-                <div class="ui-g-12">
-                    <p:dataTable id="prodtable" var="prod"
-                                 value="#{productSearchController.productList}" widgetVar="ptable"
-                                 selection="#{productSearchController.selectedProducts}"
-                                 rowKey="#{prod.productid}"
-                                 emptyMessage="No Products found">
-                        <p:column selectionMode="multiple" style="width: 16px; text-align: center"/>
-                        <p:column headerText="Stock#" sortBy="#{prod.productid}">
-                            <h:outputText value="#{prod.productid}" />
-                        </p:column>
+        <h:form id="menuform">
+            <p:panel styleClass="resolution-center" header="Search Products">
+                <f:facet name="actions">
+                    <h:commandLink styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"><h:outputText styleClass="ui-icon pi pi-question" /></h:commandLink>
+                    <h:commandLink styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"><h:outputText styleClass="ui-icon pi pi-star" /></h:commandLink>
+                </f:facet>
+                <p:outputLabel for="pcriteria" value="Search Criteria" />
+                <p:inputText id="pcriteria" placeholder="Criteria" value="#{productSearchController.criteria}" />
+                <p:commandButton value="Send" actionListener="#{productSearchController.searchProducts()}" update="prodtable"/>
 
-                        <p:column headerText="Product" sortBy="#{prod.productname}"
-                                  style="width: 40%">
-                            <h:outputText value="#{prod.productname}" />
-                        </p:column>
+                <p:dataTable id="prodtable" var="prod"
+                             value="#{productSearchController.productList}" widgetVar="ptable"
+                             selection="#{productSearchController.selectedProducts}"
+                             rowKey="#{prod.productid}"
+                             emptyMessage="No Products found">
+                    <p:column selectionMode="multiple" style="width: 16px; text-align: center"/>
+                    <p:column headerText="Stock#" sortBy="#{prod.productid}">
+                        <h:outputText value="#{prod.productid}" />
+                    </p:column>
 
-                        <p:column headerText="Unit" sortBy="#{prod.unit.unitsym}">
-                            <h:outputText value="#{prod.unit.unitsym}" />
-                        </p:column>
+                    <p:column headerText="Product" sortBy="#{prod.productname}"
+                              style="width: 40%">
+                        <h:outputText value="#{prod.productname}" />
+                    </p:column>
 
-                        <p:column headerText="SupCode" sortBy="#{prod.supplierscode}">
-                            <h:outputText value="#{prod.supplierscode}" />
-                        </p:column>
+                    <p:column headerText="Unit" sortBy="#{prod.unit.unitsym}">
+                        <h:outputText value="#{prod.unit.unitsym}" />
+                    </p:column>
 
-                        <p:column headerText="Brand" sortBy="#{prod.brand.brandname}">
-                            <h:outputText value="#{prod.brand.brandname}" />
-                        </p:column>
-                    </p:dataTable>
-                </div>
-            </h:form>
-        </div>
+                    <p:column headerText="SupCode" sortBy="#{prod.supplierscode}">
+                        <h:outputText value="#{prod.supplierscode}" />
+                    </p:column>
+
+                    <p:column headerText="Brand" sortBy="#{prod.brand.brandname}">
+                        <h:outputText value="#{prod.brand.brandname}" />
+                    </p:column>
+                </p:dataTable>
+            </p:panel>
+        </h:form>
     </div>
 </ui:composition>
