--- a/src/main/resources/META-INF/resources/california-layout/template.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template.xhtml
@@ -25,12 +25,14 @@
             <ui:include src="./topbar.xhtml" />
             <ui:include src="./sidebar.xhtml" />
             <ui:include src="./right-sidebar.xhtml" />
+            <p:growl id="msgs" showDetail="true" />
+            <p:messages showDetail="true" />
 
             <div class="layout-main">
                 <div class="route-bar">
                     <div class="route-bar-breadcrumb">
                         <i class="fa fa-home"></i> <span>/ </span>
-                        <ui:insert name="viewname" />
+                        <ui:insert name="breadcrumb" />
                     </div>
 
                     <ui:include src="./route-bar-menu.xhtml" />
