--- a/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
@@ -441,7 +441,7 @@
 						</p:submenu>
 						<p:submenu id="om_components" label="Master Data"
 							icon="fa fa-fw fa-table">
-							<p:menuitem id="om_prodmaster" value="Product"
+							<p:menuitem id="om_prodmaster" value="ProductO"
 								icon="fa fa-fw fa-sitemap" update=":mainform"
 								onclick="onTabChangeProcess()"
 								actionListener="#{tabViewController.addClosable('Product Master','inventory/prodmaster')}" />
