--- a/src/main/resources/META-INF/resources/inventory/prodmaster.xhtml
+++ b/src/main/resources/META-INF/resources/inventory/prodmaster.xhtml
@@ -18,11 +18,11 @@
                     <p:commandButton title="New Product" icon="fa fa-plus" process="@this" 
                                      actionListener="#{productTreeViewController.newTab()}"
                                      disabled="#{productTreeViewController.productNewDisabled}" 
-                                     ajax="false" onclick="form.target = '_blank'"/>
+                                     update="tabsview"/>
                     <p:commandButton title="Edit Product" icon="fa fa-pencil" 
                                      disabled="#{productTreeViewController.productEditDisabled}" 
                                      actionListener="#{productTreeViewController.editTab()}"
-                                     ajax="false" onclick="form.target = '_blank'"/>
+                                     update="tabsview"/>
 
                     <p:commandButton title="Duplicate" icon="fa fa-clone" disabled="#{productTreeViewController.productEditDisabled}" />
                 </f:facet>
